@@ -1,6 +1,7 @@
 from datetime import datetime, timedelta
 
 from django import template
+from django.conf import settings
 from django.utils.translation import ugettext_lazy as _
 
 
@@ -18,7 +19,7 @@ def duration(value):
         return _("More than %s days") % 8
     if days > 1:
         return _("%s days") % days
-    if days == 1 or 12 <= duration.hour < 24:
+    if days == 1 or settings.TREK_DAY_DURATION[0] < duration.hour <= settings.TREK_DAY_DURATION[1]:
         return _("%s day") % 1
     if duration.hour > 0:
         return _("%(hour)sH%(min)s") % {'hour': duration.hour,
