@@ -398,7 +398,11 @@ class TemplateTagsTest(TestCase):
         self.assertEqual(u"30 min", trekking_tags.duration(0.5))
         self.assertEqual(u"1H", trekking_tags.duration(1))
         self.assertEqual(u"1H45", trekking_tags.duration(1.75))
-        self.assertEqual(u"1 day", trekking_tags.duration(13))
+        self.assertEqual(u"3H30", trekking_tags.duration(3.5))
+        self.assertEqual(u"4H", trekking_tags.duration(4))
+        self.assertEqual(u"1 day", trekking_tags.duration(5))
+        self.assertEqual(u"1 day", trekking_tags.duration(10))
+        self.assertEqual(u"2 days", trekking_tags.duration(11))
         self.assertEqual(u"2 days", trekking_tags.duration(48))
         self.assertEqual(u"More than 8 days", trekking_tags.duration(24*8))
         self.assertEqual(u"More than 8 days", trekking_tags.duration(24*9))
