@@ -9,6 +9,7 @@ CHANGELOG
 * GPX now has trek description (fixes #775)
 * Order overlapping topologies by order of progression (fixes #777)
 * Improved TinyMCE configuration, for resize and cleanup (fixes #351, #711)
+* Changed trek duration interval for notion of days (fixes #880)
 
 0.20.9 (2013-10-30)
 -------------------
